base: Add a class for 80-bit float handling
Add a class that wraps SoftFloat's 80-bit float functionality. This
class provides a rich C++ interface with support for all common
operators.

--- a/src/base/SConscript
+++ b/src/base/SConscript
@@ -55,6 +55,7 @@ Source('random_mt.cc')
 if env['TARGET_ISA'] != 'null':
     Source('remote_gdb.cc')
 Source('socket.cc')
+Source('softfloat.cc')
 Source('statistics.cc')
 Source('str.cc')
 Source('time.cc')
